...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="I5N-vg-bbV"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="U34-8F-fmy"/>
                                </connections>
                            </tableView>
                            <searchBar contentMode="redraw" text="" placeholder="Search Songs" translatesAutoresizingMaskIntoConstraints="NO" id="VrC-bf-uwD">
                                <rect key="frame" x="0.0" y="64" width="320" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Search"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                            <constraint firstItem="VrC-bf-uwD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bnt-bz-ncy"/>
                            <constraint firstItem="VrC-bf-uwD" firstAttribute="leading" secondItem="CUH-F2-nEy" secondAttribute="leading" id="cps-zy-6eu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Music Player" id="gPg-N4-4ht">
                        <barButtonItem key="backBarButtonItem" title="Back" id="tu2-0f-FTP"/>
                    </navigationItem>
                    <connections>
                        <outlet property="searchBar" destination="VrC-bf-uwD" id="VU4-Rb-Pzw"/>
                        <outlet property="songList" destination="CUH-F2-nEy" id="vSL-Nb-m8g"/>
                        <segue destination="rSJ-go-s9h" kind="show" identifier="openAudio" id="Z1S-pW-Ez0"/>
                    </connections>
...
